Change log for zeit.web
=======================

2.89 (unreleased)
-----------------

- Nothing changed yet.


2.88 (2016-06-21)
-----------------

- ZON-3108: Return correct ressort for CeleraOne

- ZON-2927: Split Image.layout into display_mode and variant_name

- ZON-2256: Track comment actions

- ZON-2751: Style column teaser in buzzboard

- ZON-2345: Do not show expired videos

- ZON-3088: Restructure article header module handling

- BUG-432: Set webtrekk pagenumber for paginated centerpages

- OPS-267: Move normalize.css inline into CSS

- OPS-285: Refactor overlays

- MAINT: Replace compass with libsass and autoprefixer

- MAINT: Update bower components


2.87 (2016-06-14)
-----------------

- ZON-1985: Implement storystream teaser in article

- FIX: Actually add user id to webtrekk noscript

- FIX: Handle non-ascii URLs in remove_get_params

- BUG-430: Report embedded header asset to webtrekk

- BUG-428: Recognize campus infoboxes properly

- MAINT: Only collect production and preview errors in bugsnag


2.86 (2016-06-09)
-----------------

- ZON-3135: Implement Embed Article Header Object

- ZON-2039: Add series banner for articles

- ZON-3092: Add preconnect links

- ZON-2818: Introduce login-state-footer ESI,
  containing webtrekk-noscript with user information

- FIX: Align ZON video stage logo

- FIX: Naming things (Zeit.isWrapped)

- FIX: Enable wrapper support for framebuilder


2.85 (2016-06-08)
-----------------

- ZON-1934: polishing Schlagzeilenseite

- BUG-423: Add AdController keyword 'diuqilon' for tablet in portrait mode only

- BUG-422: Fix margin of adplace 7 on centerpages

- BUG-362: Prevent reloading hell on overscrolling

- BUG-410: Report if config loading in adReload failed

- FIX: Underline links inside ZMO articles

- FIX: Fix clicktracking label for whatsapp sharing link

- FIX: Remove "no-js" class from minimal framebuilder (freed of modernizr)

- FIX: Provide fallback date and hide copyright on Storystreams
