@@ -53,6 +53,11 @@
 //    TEXT ONLY HEADER
 // –––––––––––––––––––––––
 
+.article__head-wrap--text-only
+  +respond-min($break-3)
+      padding-left: $gutter/2
+      padding-right: $gutter/2
+
 .article__head--text-only
   text-align: left
   +respond-min($break-1)
@@ -222,4 +227,3 @@
     margin: 0 auto em_to_rem($huge) auto
     img
       width: 100%
-
